--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "Hephaestus",
-    "version": "1.1.2",
+    "version": "1.1.7",
     "main": "src/mod.js",
     "license": "MIT",
     "author": "alexkarpen",
-    "akiVersion": "3.7.*",
+    "sptVersion":"~3.9",
     "scripts": {
         "setup:environment": "npm i",
         "build:unzipped": "copyfiles -e \"./node_modules/**/*.*\" -e \"./dist/**/*.*\" -e \"./package-lock.json\" -e \"./tsconfig.json\" -e \"./README.txt\" -e \"./mod.code-workspace\" ./**/*.* ./dist",
@@ -18,7 +18,7 @@
         "@typescript-eslint/parser": "^4.33.0",
         "copyfiles": "2.4.1",
         "eslint": "7.26.0",
-        "tsyringe": "4.6.0",
+        "tsyringe": "4.8.0",
         "typescript": "4.6.4",
         "bestzip": "2.2.1"
     }
